web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-declaration2/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,29)
1|a = async function () { let await; }
 |                           ^
